add swagger and fix bug